--- a/index.html
+++ b/index.html
@@ -573,8 +573,17 @@
 			async function trackMovementSequences(partMoving, directionMoving) {
 				try {
 					const currentSequence = { partMoving, directionMoving };
+
+					// Check if the current sequence is different from the previous one
+					if (
+						movementBuffer.length > 0 &&
+						movementBuffer[movementBuffer.length - 1].partMoving === partMoving &&
+						movementBuffer[movementBuffer.length - 1].directionMoving === directionMoving
+					) {
+						return; // Exit early if the sequence is the same as the previous one
+					}
+
 					movementBuffer.push(currentSequence);
-					//console.log(movementBuffer);
 
 					// Limit the buffer to store only the last 5 variations
 					if (movementBuffer.length > 5) {
@@ -592,11 +601,11 @@
 							return;
 						}
 					}
-					//console.log('No matching pattern found.');
 				} catch (error) {
 					console.error(error);
 				}
 			}
+
 
 			// Function to check if a pattern exists in the movement buffer
 			function checkPatternInBuffer(pattern) {
