--- a/index.html
+++ b/index.html
@@ -171,15 +171,15 @@
 								"STATUS: " +
 								"Latitude: " +
 								latitude +
-								"Longitude: " +
+								", Longitude: " +
 								longitude +
-								"Direction: " +
+								", Direction: " +
 								directionText +
 								", Speed: " +
 								speed.toFixed(2) +
-								" m/s, Total Distance Walked: " +
+								" m/s, Distance Walked: " +
 								totalDistance.toFixed(2) +
-								" meters";
+								" m";
 						},
 						function (error) {
 							console.error("Error getting current location: ", error);
