--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 			let partMoving = "";
 			let directionMoving = "";
 			let patternMovement ="";
+			var blueToothStatus = "";
 
 			async function connectToDevice() {
 				try {
@@ -55,6 +56,7 @@
 						// Update UI
 						document.getElementById("connectButton").textContent = "Disconnect Avatar";
 						isConnected = true;
+						blueToothStatus = "Avatar Online";
 						setTimeout(function() {
 							startDetectMovement = true;
 						}, 4000);
@@ -63,6 +65,7 @@
 						await characteristic.stopNotifications();
 						await device.gatt.disconnect();
 						isConnected = false;
+						blueToothStatus = "Avatar Offline";
 						document.getElementById("connectButton").textContent = "Connect to Avatar";
 						// Set all potValues to 0
 						setTimeout(function() {
@@ -179,7 +182,9 @@
 								speed.toFixed(2) +
 								" m/s, Distance Walked: " +
 								totalDistance.toFixed(2) +
-								" m";
+								" m"
+								" Avatar Actions: "+
+								partMoving + " " + directionMoving;
 						},
 						function (error) {
 							console.error("Error getting current location: ", error);
