--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 							}
 							// Update the HTML element with the direction and distance walked
 							document.getElementById("currentLocation").textContent =
-								"STATUS: " +
+								"STATUS: Bluetooth: " + blueToothStatus +
 								"Latitude: " + latitude +
 								", Longitude: " + longitude +
 								", Direction: " + directionText +
