--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			let partMoving = "";
 			let directionMoving = "";
 			let patternMovement ="";
-			var blueToothStatus = "";
+			var blueToothStatus = "Avatar Offline";
 
 			async function connectToDevice() {
 				try {
