--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 								directionText = "Not moving";
 							}
 							// Update the HTML element with the direction and distance walked
-							document.getElementById("currentLocation").textContent =
+							document.getElementById("currentLocation").innerHTML =
 								"<strong>STATUS: Bluetooth:</strong> " + blueToothStatus +
 								", <strong>Latitude:</strong> " + latitude +
 								", <strong>Longitude:</strong> " + longitude +
