--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
 								"<strong>STATUS: Bluetooth:</strong> " + blueToothStatus +
 								", <strong>Latitude:</strong> " + latitude +
 								", <strong>Longitude:</strong> " + longitude +
+								", <strong>Nearest street:</strong> " + street +
 								", <strong>Direction:</strong> " + directionText +
 								", <strong>Speed:</strong> " + speed.toFixed(2) +
 								" m/s, <strong>Distance Walked:</strong> " + totalDistance.toFixed(2) +
