--- a/index.html
+++ b/index.html
@@ -682,6 +682,19 @@
 				});
 			}
 
+			// Define a function to fetch the street name and update the global variable
+			function updateStreetName() {
+				fetchStreetName()
+					.then((name) => {
+						streetName = name;
+					})
+					.catch(error => {
+						console.error(error);
+					});
+			}
+
+			// Call updateStreetName then every 10 seconds
+			setInterval(updateStreetName, 10000); // Call it every 10 seconds (10000 milliseconds)
 
 			var timeoutID; // Variable to hold the timeout ID.
 			var previousMessage = ""; // Variable to store the previous message
@@ -716,11 +729,7 @@
 						previousLatitude = latitude;
 						previousLongitude = longitude;
 						console.log("new position");
-
-						// Call fetchStreetName and wait for it to resolve
-						fetchStreetName().then((name) => {
-							// Compose the full message with fetched name
-							composeMessage(message, weatherDescription, timeOfDay, name, partMoving, directionMoving,latitude,longitude,speed,patternMovement)
+						composeMessage(message, weatherDescription, timeOfDay, name, partMoving, directionMoving,latitude,longitude,speed,patternMovement)
 								.then((fullMessage) => {
 									updateDisplay(fullMessage);
 									streetName = name;
@@ -728,7 +737,7 @@
 								.catch(error => {
 									console.error(error);
 								});
-						});
+						};
 					} else {
 						// Compose the full message using the existing streetName value
 						composeMessage(message, weatherDescription, timeOfDay, streetName, partMoving, directionMoving,latitude,longitude,speed,patternMovement)
@@ -766,7 +775,6 @@
 						console.error("An error occurred:", error);
 					}
 				}
-			}
 
 			// Function to compose the message
 			const sentencesFile = 'sentences.json';
