--- a/index.html
+++ b/index.html
@@ -130,14 +130,14 @@
 				console.log = function(...args) {
 					originalConsoleLog(...args);
 					var message = args.map(arg => typeof arg === 'object' ? JSON.stringify(arg) : arg).join(' '); // Convert objects to strings
-					consoleOutputDiv.innerHTML += '<div class="log">' + message + '</div>';
+					consoleOutputDiv.innerHTML = '<div class="log">' + message + '</div>';
 				};
 
 				// Override console.error to append error messages to the div
 				console.error = function(...args) {
 					originalConsoleError(...args);
 					var message = args.map(arg => typeof arg === 'object' ? JSON.stringify(arg) : arg).join(' '); // Convert objects to strings
-					consoleOutputDiv.innerHTML += '<div class="error">' + message + '</div>';
+					consoleOutputDiv.innerHTML = '<div class="error">' + message + '</div>';
 				};
 			}
 
