--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
 		<div id="avatarBTdiv">
 			<!-- Connect Button. -->
 			<button id="connectButton" class="button" disabled>Connect to Avatar</button>
-			<!-- Find Closest Shop Button 
-			<button id="findClosestShopButton" class="button" onclick="findClosestShop()" disabled>Find Closest Shop</button>-->
 		</div>
 		<!-- Div to display status of Avatar BT shop -->
 		<div id="closestShop"></div>
@@ -101,8 +99,7 @@
 				// Check if latitude, longitude, and weatherDescription are not null
 				if (latitude !== null && longitude !== null && weatherDescription !== null) {
 					connectButton.disabled = false;
-					//findClosestShopButton.disabled = false;
-					fetchStreetName().then((name) => {
+					fetchStreetName().then((streetName) => {
 						displayText("Ready to connect to Avatar BT");
 						});
 				} else {
