--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
 			function checkVariables() {
 				// Check if latitude, longitude, and weatherDescription are not null
 				if (latitude !== null && longitude !== null && weatherDescription !== null) {
-					connectButton.disabled = false;
-					fetchStreetName().then((streetName) => {
+					fetchStreetName().then((name) => {
+						connectButton.disabled = false;
 						displayText("Ready to connect to Avatar BT");
 						});
 				} else {
@@ -232,32 +232,6 @@
 			}
 			getCurrentLocation();
 
-			async function findClosestShop() {
-				if (navigator.geolocation) {
-					navigator.geolocation.getCurrentPosition(async function (position) {
-						const { latitude, longitude } = position.coords;
-						const radius = 5; // Change this value to adjust the radius
-						const apiURL = `https://overpass-api.de/api/interpreter?data=[out:json];node[shop](around:${radius},${latitude},${longitude});out;`;
-						try {
-							const response = await fetch(apiURL);
-							const data = await response.json();
-							if (data.elements.length > 0) {
-								const closestShop = data.elements[0].tags.name;
-								const shopLocation = [data.elements[0].lat, data.elements[0].lon];
-								const distance = calculateDistance(latitude, longitude, shopLocation[0], shopLocation[1]);
-								document.getElementById("closestShop").innerHTML = `Closest Shop: ${closestShop} Distance: ${distance.toFixed(2)} meters`;
-							} else {
-								document.getElementById("closestShop").innerHTML = `No shops found within ${radius} meters.`;
-							}
-						} catch (error) {
-							console.error("Error finding closest shop:", error);
-							document.getElementById("closestShop").innerHTML = "Error finding closest shop.";
-						}
-					});
-				} else {
-					document.getElementById("closestShop").innerHTML = "Geolocation is not supported by this browser.";
-				}
-			}
 			function calculateDistance(lat1, lon1, lat2, lon2) {
 				var R = 6371e3; // metres
 				var φ1 = (lat1 * Math.PI) / 180; // φ, λ in radians
