--- a/index.html
+++ b/index.html
@@ -128,15 +128,15 @@
 				// Override console.log to append messages to the div
 				console.log = function(...args) {
 					originalConsoleLog(...args);
-					var message = args.map(arg => typeof arg === 'object' ? JSON.stringify(arg) : arg).join(' '); // Convert objects to strings
-					consoleOutputDiv.innerHTML = '<div class="log">'+"<strong>CONSOLE LOG:</strong> " + message + '</div>';
+					var consoleMessage = args.map(arg => typeof arg === 'object' ? JSON.stringify(arg) : arg).join(' '); // Convert objects to strings
+					consoleOutputDiv.innerHTML = '<div class="log">'+"<strong>CONSOLE LOG:</strong> " + consoleMessage + '</div>';
 				};
 
 				// Override console.error to append error messages to the div
 				console.error = function(...args) {
 					originalConsoleError(...args);
-					var message = args.map(arg => typeof arg === 'object' ? JSON.stringify(arg) : arg).join(' '); // Convert objects to strings
-					consoleOutputDiv.innerHTML = '<div class="error">'+ "<strong>CONSOLE ERROR:</strong> " + message + '</div>';
+					var consoleMessage = args.map(arg => typeof arg === 'object' ? JSON.stringify(arg) : arg).join(' '); // Convert objects to strings
+					consoleOutputDiv.innerHTML = '<div class="error">'+ "<strong>CONSOLE ERROR:</strong> " + consoleMessage + '</div>';
 				};
 			}
 
@@ -760,7 +760,7 @@
 						speakMessage(fullMessage);
 
 						// Check if message is not empty to show the overlay
-						messageDisplayDiv.style.display = fullMessage.trim() !== "" ? "block" : "none";
+						messageDisplayDiv.style.display = message.trim() !== "" ? "block" : "none";
 
 						// Set a timeout to clear the text after 3 seconds or until speaking becomes false
 						var timeoutCallback = function() {
