--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<body>
 		<!-- Console output-->
 		<div id="consoleOutput"></div>
-		<h1>${deviceName} Debug</h1>
+		<h1>"Searching for Us" Debug</h1>
 		<div id="avatarBTdiv">
 			<!-- Connect Button. -->
 			<button id="connectButton" class="button" disabled>Connect to Avatar</button>
