--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			var blueToothStatus = "Avatar Offline";
 			var streetName = "Unknown";
 			var deviceName ="";
-			let labels = [];
+			let labels = ["EMPTY","EMPTY","EMPTY","EMPTY","EMPTY","EMPTY","EMPTY","EMPTY",];
 
 			async function connectToDevice() {
 				try {
