--- a/index.html
+++ b/index.html
@@ -989,6 +989,7 @@
 					console.log("Narrative");
 					displayText("Narrative");
 				}
+				console.log(tagID);
 
 				// Update previousTagID to the current tagID
 				previousTagID = tagID;
