--- a/index.html
+++ b/index.html
@@ -978,12 +978,12 @@
 					return;
 				}
 
-				if (tagID === "12") {
+				if (tagID === 12) {
 					noNarrative = false;
 					console.log("Non-narrative");
 					displayText("Non-narrative");
 				}
-				if (tagID === "13") {
+				if (tagID === 13) {
 					noNarrative = true;
 					console.log("Narrative");
 					displayText("Narrative");
