--- a/index.html
+++ b/index.html
@@ -973,6 +973,7 @@
 			var previousTagID = ""; // Variable to store the previous tagID
 
 			function readTag(tagID) {
+				console.log(tagID);
 				if (tagID === previousTagID) {
 					// If tagID is the same as the previous one, do nothing
 					return;
