--- a/index.html
+++ b/index.html
@@ -322,6 +322,7 @@
 				let values = data.split(",");
 				//console.log(values);
 				tagID = values.pop(); // Remove and store the last element as tagID
+				console.log(tagID);
 				readTag();
 				if (values.length === numPotentiometers) { // Check if the length of values is 8
 					for (let i = 0; i < values.length; i++) {
