--- a/index.html
+++ b/index.html
@@ -973,7 +973,7 @@
 			var noNarrative;
 			var previousTagID = ""; // Variable to store the previous tagID
 
-			function readTag(tagID) {
+			function readTag() {
 				if (tagID === previousTagID) {
 					// If tagID is the same as the previous one, do nothing
 					return;
