--- a/index.html
+++ b/index.html
@@ -976,21 +976,20 @@
 				if (tagID === previousTagID) {
 					// If tagID is the same as the previous one, do nothing
 					return;
+				} else {
+					if (tagID === "12") {
+						noNarrative = false;
+						console.log("Non-narrative");
+						displayText("Non-narrative");
+					}
+					if (tagID === "13") {
+						noNarrative = true;
+						console.log("Narrative");
+						displayText("Narrative");
+					}
+					// Update previousTagID to the current tagID
+					previousTagID = tagID;
 				}
-
-				if (tagID === "12") {
-					noNarrative = false;
-					console.log("Non-narrative");
-					displayText("Non-narrative");
-				}
-				if (tagID === "13") {
-					noNarrative = true;
-					console.log("Narrative");
-					displayText("Narrative");
-				}
-
-				// Update previousTagID to the current tagID
-				previousTagID = tagID;
 			}
 
 			function setupColors() {
