--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 	<body>
 		<!-- Console output-->
 		<div id="consoleOutput"></div>
-		<h1>"Searching for Us" Debug</h1>
+		<img class="logo" src="logo.svg" alt="Logo" />
+		<h1>Debug</h1>
 		<div id="avatarBTdiv">
 			<!-- Connect Button. -->
 			<button id="connectButton" class="button" disabled>Connect to Avatar</button>
