--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 	<body>
 		<!-- Console output-->
 		<div id="consoleOutput"></div>
-		<img class="logo" src="logo.svg" alt="Logo" />
-		<h1>Debug</h1>
+		<div id="logoSpace">
+			<img class="logo" src="logo.svg" alt="Logo" />
+			<h1>Debug</h1>
+		</div>
 		<div id="avatarBTdiv">
 			<!-- Connect Button. -->
 			<button id="connectButton" class="button" disabled>Connect to Avatar</button>
